--- a/email.html
+++ b/email.html
@@ -36,7 +36,7 @@
 													<tbody><tr>
 														<td style="padding: 48px 48px 32px;font-size: 18px;" valign="top">
 															<h2 style="color: #333; display: block; font-family: &quot;Helvetica Neue&quot;,Helvetica,Roboto,Arial,sans-serif; font-size: 18px; font-weight: bold; line-height: 130%; margin: 0 0 18px; text-align: right;font-family: 'Tajawal';font-size: 25px;">عنوان تجريبى</h2><div id="body_content_inner" style="color: #5c5c5c; font-family: &quot;Helvetica Neue&quot;,Helvetica,Roboto,Arial,sans-serif; font-size: 14px; line-height: 150%; text-align: right;" align="right">
-<p style="margin: 0 0 16px;font-size: 18px;font-family:'Tajwala',arial;">لوريم ايبسوم&nbsp;دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
+<p style="margin: 0 0 16px;font-size: 18px;font-family:'Tajawal',arial;">لوريم ايبسوم&nbsp;دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
 
 أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا . يوت انيم أد مينيم فينايم,كيواس نوستريد
 
@@ -47,7 +47,7 @@
 نيولا باراياتيور. أيكسسيبتيور ساينت أوككايكات كيوبايداتات نون بروايدينت ,سيونت ان كيولبا
 
 كيو أوفيسيا ديسيريونتموليت انيم أيدي ايست لابوريوم.</p>
-<p style="margin: 0 0 16px;"><a class="link" href="#" style="font-weight: normal; text-decoration: underline; color: #202020;padding: 0 10px;position: relative;text-align: center;border: 2px solid;padding: 8px 30px;text-decoration: none;border-radius: 5px;background: #3fabf3;color: #FFF;margin: auto;display: block;transition: all 0.5s ease;">زر تجريبى</a></p>
+<p style="margin: 0 0 16px;font-size:18px;font-family:'Tajawal',arial;"><a class="link" href="#" style="font-family:18px;font-family:'Tajawal',arial;font-weight: normal; text-decoration: underline; color: #202020;padding: 0 10px;position: relative;text-align: center;border: 2px solid;padding: 8px 30px;text-decoration: none;border-radius: 5px;background: #3fabf3;color: #FFF;margin: auto;display: block;transition: all 0.5s ease;">زر تجريبى</a></p>
 
 
 
