--- a/email.html
+++ b/email.html
@@ -36,7 +36,7 @@
 													<tbody><tr>
 														<td style="padding: 48px 48px 32px;font-size: 18px;" valign="top">
 															<h2 style="color: #333; display: block; font-family: &quot;Helvetica Neue&quot;,Helvetica,Roboto,Arial,sans-serif; font-size: 18px; font-weight: bold; line-height: 130%; margin: 0 0 18px; text-align: right;font-family: 'Tajawal';font-size: 25px;">عنوان تجريبى</h2><div id="body_content_inner" style="color: #5c5c5c; font-family: &quot;Helvetica Neue&quot;,Helvetica,Roboto,Arial,sans-serif; font-size: 14px; line-height: 150%; text-align: right;" align="right">
-<p style="margin: 0 0 16px;font-size: 18px;font-family:'Tajawal',arial;">لوريم ايبسوم&nbsp;دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
+<p style="margin: 0 0 16px;font-size: 18px;font-family:'Tajawal',arial;line-height:30px;">لوريم ايبسوم&nbsp;دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
 
 أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا . يوت انيم أد مينيم فينايم,كيواس نوستريد
 
