--- a/email.html
+++ b/email.html
@@ -5,7 +5,7 @@
 		<title>إنجاب Ingaab</title>
 	</head>
 	<body offset="0" style="padding: 0;" topmargin="0" rightmargin="0" marginwidth="0" marginheight="0">
-		<div id="wrapper" dir="rtl" style="background-color: #E3E8FF; margin: 0; padding: 70px 0; width: 100%; -webkit-text-size-adjust: none;" bgcolor="#eee" width="100%">
+		<div id="wrapper" dir="rtl" style="background-color: #F9F9F9; margin: 0; padding: 70px 0; width: 100%; -webkit-text-size-adjust: none;" bgcolor="#eee" width="100%">
 			<table width="100%" height="100%" cellspacing="0" cellpadding="0" border="0">
 				<tbody><tr>
 					<td valign="top" align="center">
