--- a/email.html
+++ b/email.html
@@ -1,5 +1,7 @@
 <html dir="rtl" lang="ar"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta charset="utf-8">
+	<meta name = 'viewport' content = 'width=device-width,initial-scale=1.0' />
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link href="https://fonts.googleapis.com/css2?family=Alexandria&amp;family=Cairo:wght@200&amp;family=Tajawal:wght@300&amp;display=swap" rel="stylesheet">
 
 		<title>إنجاب Ingaab</title>
