--- a/email.html
+++ b/email.html
@@ -40,13 +40,13 @@
 															<h2 style="color: #333; display: block; font-family: &quot;Helvetica Neue&quot;,Helvetica,Roboto,Arial,sans-serif; font-size: 18px; font-weight: bold; line-height: 130%; margin: 0 0 18px; text-align: right;font-family: 'Tajawal';font-size: 25px;">كورس تغذية مجانى</h2><div id="body_content_inner" style="color: #5c5c5c; font-family: &quot;Helvetica Neue&quot;,Helvetica,Roboto,Arial,sans-serif; font-size: 14px; line-height: 150%; text-align: right;" align="right">
 <img src = '321552387_919158129247043_1191250682413136355_n.jpg' height = '250' style = 'display:block;margin:15px auto;'/>
 															<p style="margin: 0 0 16px;font-size: 18px;font-family:'Tajawal',arial;line-height:30px;">قد تتسبب سوء التغذية أثناء الحمل من أثار جانبية خطيرة على جنينك.
-															ومن خلال هذا الفيديو ستتعرفى على:
-															- ما هو سوء التغذية أثناء الحمل ؟
-															- ما هى أسباب سوء التغذية؟
-															- المخاطر الصحية للأم
-															- مخاطر صحية على الطفل
-															- الوقاية من سوء التغذية
-															
+															ومن خلال هذا الفيديو ستتعرفى على:<br />
+															- ما هو سوء التغذية أثناء الحمل ؟<br />
+															- ما هى أسباب سوء التغذية؟<br />
+															- المخاطر الصحية للأم<br />
+															- مخاطر صحية على الطفل<br />
+															- الوقاية من سوء التغذية<br />
+															<br />
 															تعرفى على كل هذه الموضوعات من خلال هذا الفيديو</p>
 <p style="margin: 0 0 16px;font-size:18px;font-family:'Tajawal',arial;"><a class="link" href="https://youtu.be/RG795Cyrxj4" style="font-family:18px;font-family:'Tajawal',arial;font-weight: normal; text-decoration: underline; color: #202020;padding: 0 10px;position: relative;text-align: center;border: 2px solid;padding: 8px 30px;text-decoration: none;border-radius: 5px;background: #3fabf3;color: #FFF;margin: auto;display: block;transition: all 0.5s ease;">شاهد الأن</a></p>
 
