--- a/ingaab.html
+++ b/ingaab.html
@@ -178,7 +178,7 @@
 			
 			body > header {
 			
-				background:url(file://C:/users/loay/Downloads/lauren-mancke-aOC7TSLb1o8-unsplash.jpg) 50% 50%/cover no-repeat;
+				background:url(lauren-mancke-aOC7TSLb1o8-unsplash.jpg) 50% 50%/cover no-repeat;
 			
 				padding:40px 0;
 			
