--- a/ingaab.html
+++ b/ingaab.html
@@ -6,7 +6,7 @@
 		<meta name = 'viewport' content = 'width=device-width,initial-scale=1.0' />
 		<link rel = 'stylesheet' href = 'fontawesome-free-5.14.0-web/fontawesome-free-5.14.0/css/all.min.css' />
 		<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300&display=swap" rel="stylesheet">
-		<link href="file:///D:/Tools/fontawesome-free-5.14.0-web/fontawesome-free-5.14.0/css/all.min.css" rel = 'stylesheet' />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel = 'stylesheet' />
 		<style>
 		
 			* { 
