--- a/ingaab.html
+++ b/ingaab.html
@@ -621,7 +621,7 @@
 			<h4>
 			مقدمة: البدء
 			</h4>
-			<img src = 'file://C:\Users\loay\Downloads\0.jpg' />
+			<img src = '0.jpg' />
 			<p>تعرف على نظرة عامة حول ما ستتعلمه في هذه الدورة ولماذا يعتبر كانفا Canva أداة مهمة لجميع أصحاب الأعمال. بالإضافة إلى ذلك، ستحصل على فكرة أفضل عن سبب تفضيل الأشخاص للشراء منك مقابل استخدام القوالب المجانية.</p>
 		</div>
 	
@@ -629,7 +629,7 @@
 			<h4>
 			الوحدة 1: بدء متجر قوالب كانفا Canva ناجح
 			</h4>
-			<img src = 'file://C:\Users\loay\Downloads\1.jpg' />
+			<img src = '1.jpg' />
 			<p>
 	تعرف على كيفية العثور على أماكن التي يمكنك من خلالها تحقبق أرباحك المتوقعة، وتحديد جمهورك المستهدف، وكيفية استخدام اتجاهات eRank وAlura وEtsy وGoogle للعثور على منتجات مربحة. 		
 			</p>
@@ -639,7 +639,7 @@
 			<h4>
 			الوحدة 2: دروس تصميم كانفا Canva لمنتجات مختلفة
 			</h4>
-			<img src = 'file://C:\Users\loay\Downloads\2.jpg' />
+			<img src = '2.jpg' />
 			<p>
 	تعرف على كيفية تصميم كتاب إلكتروني / مصنف، وقوالب وسائط اجتماعية، وشعارات، وتوقيع بريد إلكتروني، ودعوات زفاف، ومواد مطبوعة. بالإضافة إلى ذلك، تعرف على كيفية اختيار الألوان والخطوط المناسبة للقوالب الخاصة بك.		
 			</p>
@@ -649,7 +649,7 @@
 			<h4>
 			الوحدة 3: قم بإعداد نماذج كانفا Canva الخاصة بك للبيع
 			</h4>
-			<img src = 'file://C:\Users\loay\Downloads\3.jpg' />
+			<img src = '3.jpg' />
 			<p>
 	تعرف على كيفية تحضير القوالب الخاصة بك للبيع، وكيفية إنشاء قوائم جميلة باستخدام  كانفا Canva، وكيفية تسعير القوالب الخاصة بك، وكيفية كتابة وصف المنتج.	
 			</p>
@@ -659,7 +659,7 @@
 			<h4>
 			الوحدة 4: البيع في السوق الإبداعي
 			</h4>
-			<img src = 'file://C:\Users\loay\Downloads\4.jpg' />
+			<img src = '4.jpg' />
 			<p>
 	قم بإعداد متجر في Creative market وتعرف على كيفية استخدام علامات Creative Market لجذب حركة المرور إلى متجرك. بالإضافة إلى ذلك، تعرف على كيفية تحميل منتجاتك، واستخدام لوحة القيادة وكيفية تحقيق الربح.		
 			</p>
@@ -669,7 +669,7 @@
 			<h4>
 			الوحدة 5: البيع على Etsy.
 			</h4>
-			<img src = 'file://C:\Users\loay\Downloads\5.jpg' />
+			<img src = '5.jpg' />
 			<p>
 	تعرف على كيفية إنشاء متجر على Etsy، وفهم Etsy SEO، وكيفية العثور على الكلمات الرئيسية باستخدام المواقع المتخصصة، وكيفية العثور على العلامات الصحيحة، وكيفية تحسين قوائمك وكيفية تحميل منتجاتك.		
 			</p>
@@ -679,7 +679,7 @@
 			<h4>
 			الوحدة 6: البيع على موقع الويب الخاص بك
 			</h4>
-			<img src = 'file://C:\Users\loay\Downloads\6.jpg' />
+			<img src = '6.jpg' />
 			<p>
 			موارد لمساعدتك في اختيار نظام أساسي لبدء موقع الويب الخاص بك بالإضافة إلى نصائح حول كيفية زيادة حركة المرور إلى متجرك.
 			</p>
@@ -689,7 +689,7 @@
 			<h4>
 			الوحدة 7: استخدم Pinterest لدفع حركة المرور إلى متجرك
 			</h4>
-			<img src = 'file://C:\Users\loay\Downloads\7.webp' />
+			<img src = '7.webp' />
 			<p>
 	تعرف على كيفية إعداد حساب أعمال Pinterest، وكيفية تنشيط الدبابيس الغنية، وكيفية تحسين Pinterest SEO، ومكان وضع الكلمات الرئيسية وأفكار المحتوى لأي متجر.		
 			</p>
